manifests/apps/manifests/idobata/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: idobata
  replicas: 1 # NOTE: has to be 1 because the idobata service is not scalable yet
  template:
    metadata:
      labels:
        app: idobata
    spec:
      containers:
      - image: matoruru/idobata-api:0.0.0
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
