manifests/apps/manifests/idobata/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: idobata-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: idobata-api
  type: ClusterIP
